# Smart-Identity-Wallet---HACKATHON-Heaven-Solutions

./: .gitignore  README.md
ai_service/: chat_bot.py  main.py  ocr_identitycard.py  requirements.txt
client/: main.py
client/frontend/: app.py
client/frontend/screens/: login_screen.py  photo_success_screen.py  pop_card.py  processing_screen.py  register_screen.py  server_setup_screen.py  splash_screen.py
client/frontend/screens/cards_screen/: idenity_card.py
client/frontend/screens/chat_screens/: chat_screen.py
client/frontend/screens/home_screen/: diverse_docs_screen.py  home_screen.py  personal_docs_screen.py  scan_camera_screen.py  transport_docs_screen.py  vehicul_docs_screen.py
client/frontend/screens/popup_screens/: pop_card.py  qr_popup.py
client/frontend/screens/save_screens/: save_data.py
client/frontend/screens/settings/: account_info_screen.py  security_screen.py  settings.py
client/server_requests/: ai_data_requester.py  auth_requester.py  data_requester.py  server_connect.py
server/: Cargo.toml
server/src/: main.rs
server/src/ai_microservice/: ai_requests.rs  mod.rs
server/src/data_manager/: database_manager.rs  mod.rs  password_hashing.rs
server/src/handle_requests/: auth_requests.rs  cripto_manager.rs  data_requests.rs  mod.rs  response_handler.rs
server/src/handle_requests/info_data_requests/: mod.rs  news_data_requests.rs
server/src/handle_requests/personal_data_requests/: mod.rs  personal_data_manager.rs  wallet_data.rs
server/src/network/: auth.rs  middleware.rs  mod.rs  server_https.rs
server/src/others/: common.rs
(+9 files in other folders)
